fetch data from web, parameter handling, testcase checksums
trx2txt.sh: fetch data from the web using the "-t" option and a hash of a bitcoin transaction (via blockchain.info)
trx2txt.sh: verify network status before reaching out to a webpage
trx2txt.sh: change parameter handling, to include "-t" and "-r"
trx_testcases.sh: added verification of checksum results

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -23,5 +23,7 @@ date    by    file                   comment
 16jun14 svn   trx_in_sig_script.sh   check if "sed" is available
                                      changed SIG R & SIG S to be 0x21 or 0x21
 16jun14 svn   trx_testcases.sh       added log file capability
-
+16jun15 svn   trx2txt.sh             parameter handling changed completly ("-r", "-t")
+16jun15 svn   trx2txt.sh             add feature to load data from www.blockchain.info
+16jun14 svn   trx_testcases.sh       added checksum results into output
 
