--- a/Changelog.txt
+++ b/Changelog.txt
@@ -56,8 +56,11 @@ yymmmdd
 16jul27 svn   trx_in_sig_script.sh   added multisig handling 
 16jul27 svn   trx2txt.sh             corrected code for unsigned raw trx
 16jul28 svn   trx_create_sign.sh     included strict DER-encoded signature checks 
-16jul30 svn   trx_in_sig_script.sh   refactored code: use "cut -b" for "get_next_char"
+16jul30 svn   trx_in_sig_script.sh   rewrote code: use "cut -b" for "get_next_char"
                                      get rid of "if bash == BASH4", no array handling
+16jul31 svn   trx2txt.sh             added error check when fetching from blockchain.info
+16jul31 svn   trx_in_sig_script.sh   fixed minor issue, were wrong address was displayed
+16jul31 svn   trx_in_sig_state_machine.graphml - cleaned up for MultiSig (S30 ff)
 
 
 
